--- a/src/app/common/entry-detail/entry-detail.component.html
+++ b/src/app/common/entry-detail/entry-detail.component.html
@@ -44,7 +44,7 @@
             </div>
             <div class="d-flex row-card mt-2">
                 <div class="label">Delivery Boy Name</div>
-                <div class="data link-text" (click)="openDeliveryBoyProfile()">{{formatData.dName}}</div>
+                <div class="data link-text" (click)="openDeliveryBoyProfile()" tabindex="0">{{formatData.dName}}</div>
             </div>
             <div class="d-flex row-card mt-2" *ngIf="formatData.dNumber">
                 <div class="label">Delivery Boy Number</div>
