--- a/src/app/dashboard/new-entry/new-entry.component.html
+++ b/src/app/dashboard/new-entry/new-entry.component.html
@@ -52,7 +52,8 @@
                 </mat-form-field>
                 <div class="select-dropdown"
                     *ngIf="deliveryBoysSearchList.length > 0 && focusedFormName === 'deliveryBoyName'">
-                    <div class="profile" *ngFor="let obj of deliveryBoysSearchList" (click)="onSelectDeliveryBoy(obj)">
+                    <div class="profile" *ngFor="let obj of deliveryBoysSearchList" (click)="onSelectDeliveryBoy(obj)"
+                        tabindex="0">
                         <span class="bold-text me-2">{{obj.data.fullName}}</span>
                         <span *ngIf="obj.data?.phoneNumber"
                             class="dropdown-number">{{formatNumber(obj.data.phoneNumber)}}</span>
@@ -67,7 +68,8 @@
                 </mat-form-field>
                 <div class="select-dropdown"
                     *ngIf="deliveryBoysSearchList.length > 0 && focusedFormName === 'deliveryBoyNumber'">
-                    <div class="profile" *ngFor="let obj of deliveryBoysSearchList" (click)="onSelectDeliveryBoy(obj)">
+                    <div class="profile" *ngFor="let obj of deliveryBoysSearchList" (click)="onSelectDeliveryBoy(obj)"
+                        tabindex="0">
                         <span class="bold-text me-2">{{obj.data.fullName}}</span>
                         <span *ngIf="obj.data?.phoneNumber"
                             class="dropdown-number">{{formatNumber(obj.data.phoneNumber)}}</span>
