--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="dashboard-container flex-column">
     <div class="top-navbar justify-content-between d-flex">
-        <div class="align-self-center fire-icon">
+        <div class="align-self-center logo-section" (click)="takeMeToDashboard()" tabindex="0">
             <img src="assets/images/icons/favicon.png" height="40px" alt="Fuel Flow Icon" class="me-2 logo-icon">
             <img src="assets/images/logo/banner_1.png" height="30px" alt="Fuel Flow Logo" title="Fuel Flow India"
                 [ngClass]="activeNavMenu === 'inventory' ? 'logo-text-inventory' : 'logo-text-normal'">
