--- a/src/app/dashboard/new-account/new-account.component.html
+++ b/src/app/dashboard/new-account/new-account.component.html
@@ -32,14 +32,22 @@
                     class="limit-textarea-1"></textarea>
             </mat-form-field>
         </div>
-        <div class="mt-3" *ngIf="userType === 'customer'">
-            <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Shipping Address.</mat-label>
-                <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off"
-                    formControlName="shippingAddress" class="limit-textarea-1"></textarea>
-            </mat-form-field>
+        <div *ngIf="userType === 'customer'">
+            <div class="mt-3 w-100 d-flex" *ngFor="let item of [].constructor(shippingAddressCount); let i = index">
+                <mat-form-field appearance="outline" class="flex-grow-1">
+                    <mat-label>Shipping Address.<span *ngIf="shippingAddressCount>1"> ({{i+1}})</span></mat-label>
+                    <textarea matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off"
+                        [formControlName]="'shippingAddress'+(i+1)" class="limit-textarea-1"></textarea>
+                </mat-form-field>
+                <button class="remove-address-btn ms-2" *ngIf="shippingAddressCount>1" mat-flat-button
+                    (click)="removeThisAddress(i)">X</button>
+            </div>
+            <div class="d-flex justify-content-end">
+                <button class="custom-btn mt-2" mat-flat-button (click)="addMoreShippingAddress()"
+                    [disabled]="shippingAddressCount >= 10">Add More Address</button>
+            </div>
         </div>
-        <div class="mt-3">
+        <div class="mt-2">
             <mat-form-field appearance="outline" class="w-100">
                 <mat-label>Extra details</mat-label>
                 <textarea matInput placeholder="Have Good behaviour..." autocomplete="off" formControlName="extraNote"
