added version in profile and auth page

--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -121,4 +121,7 @@
             </div>
         </div>
     </div>
+    <div class="version">
+        <span [title]="localStorage.LAST_UPDATED">v{{localStorage.CURRENT_VERSION}}</span>
+    </div>
 </div>
