--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,40 +1,45 @@
-<div class="profile-container d-flex justify-content-center align-items-center">
-    <div class="profile-box">
-        <div class="d-flex top-section">
-            <div>
-                <img class="profile-image" title="Profile" *ngIf="!profilePicLink && adminProfileData?.male"
-                    src="assets/images/svg/profile_male.svg" alt="Male profile Image">
-                <img class="profile-image" title="Profile" *ngIf="!profilePicLink && !adminProfileData?.male"
-                    src="assets/images/svg/profile_female.svg" alt="Male profile Image">
-                <img class="profile-image" title="Profile" *ngIf="profilePicLink" [src]="profilePicLink"
-                    alt="Male profile Image" (error)="profilePicLink = undefined">
+<div class="profile-container">
+    <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="profile-box">
+            <div class="d-flex top-section">
+                <div>
+                    <img class="profile-image" title="Profile" *ngIf="!profilePicLink && adminProfileData?.male"
+                        src="assets/images/svg/profile_male.svg" alt="Male profile Image">
+                    <img class="profile-image" title="Profile" *ngIf="!profilePicLink && !adminProfileData?.male"
+                        src="assets/images/svg/profile_female.svg" alt="Male profile Image">
+                    <img class="profile-image" title="Profile" *ngIf="profilePicLink" [src]="profilePicLink"
+                        alt="Male profile Image" (error)="profilePicLink = undefined">
+                </div>
+                <div class="d-flex justify-content-center flex-column ms-3">
+                    <div class="heading bold-text">{{adminProfileData?.fullName}}</div>
+                    <div class="secondary-color">+{{adminProfileData?.contact?.countryCode || '91'}}
+                        {{getNumberInformat(adminProfileData?.contact?.phoneNumber)}}</div>
+                </div>
             </div>
-            <div class="d-flex justify-content-center flex-column ms-3">
-                <div class="heading bold-text">{{adminProfileData?.fullName}}</div>
-                <div class="secondary-color">+{{adminProfileData?.contact?.countryCode || '91'}}
+            <div class="d-flex align-items-center justify-content-between detail-section">
+                <div class="bold-text">Name</div>
+                <div>{{adminProfileData?.fullName}}</div>
+            </div>
+            <div class="d-flex align-items-center justify-content-between detail-section">
+                <div class="bold-text">Contact Number</div>
+                <div>+{{adminProfileData?.contact?.countryCode || '91'}}
                     {{getNumberInformat(adminProfileData?.contact?.phoneNumber)}}</div>
             </div>
+            <div class="d-flex align-items-center justify-content-between detail-section">
+                <div class="bold-text">Gender</div>
+                <div>{{adminProfileData?.male ? 'Male':'Female'}}</div>
+            </div>
+            <div class="d-flex align-items-center justify-content-between detail-section">
+                <div class="bold-text">Account Created</div>
+                <div>{{formatDateAndTime(adminProfileData?.importantTimes?.createdAt)}}</div>
+            </div>
+            <div class="d-flex align-items-center justify-content-between detail-section">
+                <div class="bold-text">Last Login</div>
+                <div>{{formatDateAndTime(adminProfileData?.importantTimes?.lastSeen)}}</div>
+            </div>
         </div>
-        <div class="d-flex align-items-center justify-content-between detail-section">
-            <div class="bold-text">Name</div>
-            <div>{{adminProfileData?.fullName}}</div>
-        </div>
-        <div class="d-flex align-items-center justify-content-between detail-section">
-            <div class="bold-text">Contact Number</div>
-            <div>+{{adminProfileData?.contact?.countryCode || '91'}}
-                {{getNumberInformat(adminProfileData?.contact?.phoneNumber)}}</div>
-        </div>
-        <div class="d-flex align-items-center justify-content-between detail-section">
-            <div class="bold-text">Gender</div>
-            <div>{{adminProfileData?.male ? 'Male':'Female'}}</div>
-        </div>
-        <div class="d-flex align-items-center justify-content-between detail-section">
-            <div class="bold-text">Account Created</div>
-            <div>{{formatDateAndTime(adminProfileData?.importantTimes?.createdAt)}}</div>
-        </div>
-        <div class="d-flex align-items-center justify-content-between detail-section">
-            <div class="bold-text">Last Login</div>
-            <div>{{formatDateAndTime(adminProfileData?.importantTimes?.lastSeen)}}</div>
-        </div>
+    </div>
+    <div class="version">
+        <span [title]="localStorage.LAST_UPDATED">v{{localStorage.CURRENT_VERSION}}</span>
     </div>
 </div>
