--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div class="version">
+    <div class="version secondary-color">
         <span [title]="localStorage.LAST_UPDATED">v{{localStorage.CURRENT_VERSION}}</span>
     </div>
 </div>
