--- a/src/app/authentication/authentication.component.html
+++ b/src/app/authentication/authentication.component.html
@@ -121,7 +121,7 @@
             </div>
         </div>
     </div>
-    <div class="version">
+    <div class="version secondary-color">
         <span [title]="localStorage.LAST_UPDATED">v{{localStorage.CURRENT_VERSION}}</span>
     </div>
 </div>
