--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -87,6 +87,10 @@
                 text-align: end
             }
 
+            .witdh-limit-200 {
+                max-width: 200px;
+            }
+
             .name-text {
                 white-space: nowrap;
                 overflow: hidden;
