--- a/src/app/dashboard/new-entry/new-entry.component.html
+++ b/src/app/dashboard/new-entry/new-entry.component.html
@@ -2,7 +2,7 @@
     <div class="heading bold-text">Add New Entry</div>
     <div>Please provide the following details.</div>
 
-    <form [formGroup]="entryForm" class="customer-form">
+    <form [formGroup]="entryForm" #formSection class="customer-form">
         <div class="gap d-flex w-100 flex-wrap">
             <div class="pt-2 box-input">
                 <mat-form-field appearance="outline" class="w-100">
@@ -40,6 +40,20 @@
                     <input matInput placeholder="1400" [maxLength]="10" autocomplete="off" formControlName="paidAmt"
                         (focus)="onfocus('paidAmt')">
                 </mat-form-field>
+            </div>
+            <div class="pt-2 box-input-half p-relative">
+                <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Select Address</mat-label>
+                    <input matInput placeholder="ABC Lane, XYZ Road 132002" autocomplete="off"
+                        formControlName="shippingAddress" (focus)="onfocus('shippingAddress')">
+                </mat-form-field>
+                <div class="select-dropdown"
+                    *ngIf="shippingAddressSearchList.length > 0 && focusedFormName === 'shippingAddress'">
+                    <div class="profile" *ngFor="let address of shippingAddressSearchList" (click)="onSelectShippingAddress(address)"
+                        tabindex="0">
+                        <span class="bold-text me-2">{{address}}</span>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="mt-3 bold-text nowrap">Please provide the delivery boy details.</div>
