--- a/src/app/common/entry-detail/entry-detail.component.html
+++ b/src/app/common/entry-detail/entry-detail.component.html
@@ -15,6 +15,10 @@
                 <div class="data">+91 {{formatData.cNumber}}</div>
             </div>
             <div class="d-flex row-card mt-2">
+                <div class="label">Address</div>
+                <div class="data">{{formatData.shippingAddress}}</div>
+            </div>
+            <div class="d-flex row-card mt-2">
                 <div class="label">Date</div>
                 <div class="data">{{formatData.date}}</div>
             </div>
