show all address in account details component

--- a/src/app/common/user-details/user-details.component.scss
+++ b/src/app/common/user-details/user-details.component.scss
@@ -38,6 +38,10 @@
         }
     }
 
+    .show-more-address:hover {
+        cursor: pointer;
+    }
+
     .noWrap {
         white-space: nowrap;
         overflow: hidden;
