--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -9,8 +9,12 @@
 <div class="parent-inventory h-100">
     <div class="inventory-container d-flex flex-column h-100">
         <div class="d-flex align-items-center flex-wrap gap-15 justify-content-between">
-            <input class="capsule search-box flex-grow-1" type="text" placeholder="Search in inventory"
-                (input)="onSearch($event)">
+            <div class="flex-grow-1 d-flex align-items-center">
+                <input class="capsule search-box flex-grow-1" type="text" placeholder="Search in inventory"
+                    (input)="onSearch($event)">
+                <img src="assets/images/svg/filter.svg" alt="Filter" title="Filter" class="filter-icon" height="24px"
+                    *ngIf="!filterActive" width="24px" (click)="filterActive = true" tabindex="0">
+            </div>
             <div class="d-flex align-items-center flex-wrap gap-15">
                 <div class="capsule entry-btn" (click)="newEntry=!newEntry" tabindex="0">
                     <span class="bold-text">{{newEntry?'Cancel':'New Entry'}}</span>
@@ -36,6 +40,51 @@
                     <span class="secondary-color">{{pendingUnit}}</span>
                 </div>
             </div>
+        </div>
+
+        <div class="filter-section mt-3 d-flex justify-content-between" *ngIf="filterActive" #filterArea>
+            <div class="gap d-flex w-100 flex-wrap flex-grow-1">
+                <div class="p-relative">
+                    <input class="filter-input capsule" #customerName [maxLength]="30" autocomplete="off"
+                        (click)="customerName.select()" placeHolder="Customer Name" (input)="searchCustomer()"
+                        (focus)="onfocus('customerName')">
+                    <div class="select-dropdown"
+                        *ngIf="customerSearchList.length > 0 && focusedFormName === 'customerName'">
+                        <div class="profile" *ngFor="let obj of customerSearchList" (click)="onSelectCustomer(obj)"
+                            tabindex="0">
+                            <span class="bold-text me-2">{{obj.data.fullName}}</span>
+                            <span *ngIf="obj.data?.phoneNumber"
+                                class="dropdown-number">{{formatNumber(obj.data.phoneNumber)}}</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="p-relative" *ngIf="shippingAddressList && shippingAddressList.length>0">
+                    <div class="address-selector capsule gap" (click)="onfocus('addressDropdowm')" tabindex="0">
+                        <span class="secondary-color" *ngIf="shippingAddressSubmitted.length === 0">
+                            Select Address</span>
+                        <span class="address-capsule d-flex align-items-center"
+                            *ngFor="let address of shippingAddressSubmitted; let i = index">
+                            <span class="nowrap limit-width-150">{{address}}</span>
+                            <img src="../../../assets/images/svg/close.svg" alt="X" height="16px" class="ms-1"
+                                (click)="removeAddress($event, i)" tabindex="0">
+                        </span>
+                    </div>
+                    <div class="select-dropdown hight-no-limit" *ngIf="focusedFormName === 'addressDropdowm'">
+                        <div class="profile" *ngFor="let address of shippingAddressList"
+                            (click)="toggleSelectAddress(address)" tabindex="0">
+                            <div class="d-flex justify-content-between align-items-center">
+                                {{address}}
+                                <img src="assets/images/svg/tick.svg" alt="✔️" height="24px"
+                                    *ngIf="shippingAddressSelectedList.includes(address)">
+                            </div>
+                        </div>
+                        <div class="address-submit" (click)="submitAddressFilters()" tabindex="0"
+                            *ngIf="shippingAddressSelectedList.length>0">Submit</div>
+                    </div>
+                </div>
+            </div>
+            <img src="assets/images/svg/close-circle.svg" alt="Close" class="close-icon" (click)="closeFilter()"
+                tabindex="0">
         </div>
 
         <div class="w-100 table-div mt-4">
