--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -9,8 +9,22 @@
         max-height: calc(100vh - 70px);
         min-width: 500px;
 
+        .gap {
+            gap: 10px;
+        }
+
         .gap-15 {
             gap: 15px;
+        }
+
+        .nowrap {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+
+            &.limit-width-150 {
+                max-width: 150px;
+            }
         }
 
         .capsule {
@@ -65,6 +79,100 @@
             }
         }
 
+        .filter-icon {
+            margin-top: 2px;
+            margin-left: -34px;
+            margin-right: 15px;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
+        .close-icon {
+            height: 40px;
+
+            &:hover {
+                cursor: pointer;
+            }
+        }
+
+        .filter-section {
+            background-color: $border-light;
+            padding: 10px;
+            border-radius: 50px;
+
+            .filter-input {
+                outline: none;
+                min-width: 300px;
+            }
+
+            .p-relative {
+                position: relative;
+            }
+
+            .select-dropdown {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                background-color: white;
+                box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+                border: 1px solid gray;
+                z-index: 10;
+                max-height: 200px;
+                overflow-y: auto;
+                border-radius: 10px;
+
+                &.hight-no-limit {
+                    max-height: unset;
+                }
+
+                .profile {
+                    padding: 7px 10px;
+
+                    &:hover {
+                        background-color: $border-very-light2;
+                        cursor: pointer;
+                    }
+                }
+            }
+
+            .dropdown-number {
+                background-color: $border-light;
+                padding: 3px 5px;
+                border-radius: 5px;
+            }
+
+            .address-capsule {
+                background-color: $border-light;
+                padding: 0px 6px;
+                border-radius: 50px;
+            }
+
+            .address-selector {
+                background-color: white;
+                min-width: 300px;
+                max-width: 350px;
+                overflow: auto;
+                scrollbar-width: none;
+
+                &:hover {
+                    cursor: pointer;
+                }
+            }
+
+            .address-submit {
+                background-color: #40916c;
+                padding: 7px 10px;
+                color: white;
+
+                &:hover {
+                    background-color: #2d6a4f;
+                    cursor: pointer;
+                }
+            }
+        }
 
         .custom-table {
             .custom-header-row {
