--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -31,14 +31,6 @@
                     *ngIf="dataSource.data && dataSource.data.length>0">
                     <span class="bold-text">Export PDF</span>
                 </div>
-                <div class="capsule hover-action" [ngClass]="{'danger':dueAmount>0}">
-                    <span class="bold-text me-2">Due Amount:</span>
-                    <span class="secondary-color">{{dueAmount | number: '1.2-2'}} Rs</span>
-                </div>
-                <div class="capsule hover-action" [ngClass]="{'danger':pendingUnit>0}">
-                    <span class="bold-text me-2">Pending Units:</span>
-                    <span class="secondary-color">{{pendingUnit}}</span>
-                </div>
             </div>
         </div>
 
@@ -115,6 +107,13 @@
                     Please add new entries!
                 </div>
             </div>
+        </div>
+
+        <div class="footer-section d-flex justify-content-end gap-15 w-100">
+            <span>Sent: {{getStat('sentSum')}}</span>
+            <span>Recieved: {{getStat('recieveSum')}}</span>
+            <span>Pending: {{getStat('pending')}}</span>
+            <span>Due Amount: {{getStat('dueAmt') | number: '1.2-2'}}</span>
         </div>
 
         <ng-template #plainText let-value let-column="column">
