--- a/src/app/dashboard/inventory/inventory.component.scss
+++ b/src/app/dashboard/inventory/inventory.component.scss
@@ -48,10 +48,6 @@
                 }
             }
 
-            &.danger {
-                border-bottom: 3px solid $primary-web-red;
-            }
-
             &.entry-btn {
                 &:hover {
                     background-color: $primary-mat-color;
@@ -218,6 +214,14 @@
 
         .table-div {
             overflow-y: auto;
+        }
+
+        .footer-section {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            background-color: $border-light;
+            padding: 10px 40px;
         }
     }
 
