added product page

--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -109,7 +109,7 @@
             </div>
         </div>
 
-        <div class="footer-section d-flex justify-content-end gap-15 w-100">
+        <div class="footer-section d-flex justify-content-end gap-15 w-100 flex-wrap">
             <span>Sent: {{getStat('sentSum')}}</span>
             <span>Recieved: {{getStat('recieveSum')}}</span>
             <span>Pending: {{getStat('pending')}}</span>
