ask products in new full entry

--- a/src/app/dashboard/inventory/inventory.component.html
+++ b/src/app/dashboard/inventory/inventory.component.html
@@ -57,7 +57,7 @@
                         <span class="address-capsule d-flex align-items-center"
                             *ngFor="let address of shippingAddressSubmitted; let i = index">
                             <span class="nowrap limit-width-150">{{address}}</span>
-                            <img src="../../../assets/images/svg/close.svg" alt="X" height="16px" class="ms-1"
+                            <img src="assets/images/svg/close.svg" alt="X" height="16px" class="ms-1"
                                 (click)="removeAddress($event, i)" tabindex="0">
                         </span>
                     </div>
